added database queries

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10655,8 +10655,16 @@ a.text-dark:focus {
   }
 }
 
-.content {
-  padding-top: 30px;
+.content-main {
+  padding-top: 60px;
+}
+
+.card {
+  margin-bottom: 30px;
+}
+
+.badge {
+  margin-left: 10px;
 }
 
 .navbar-laravel {
