--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -1,3 +1,11 @@
-.content {
-    padding-top: 30px;
+.content-main {
+    padding-top: 60px;
+}
+
+.card {
+    margin-bottom: 30px;
+}
+
+.badge {
+    margin-left: 10px;
 }
